--- a/pyha-chrome/src/browser_action/browser_action.html
+++ b/pyha-chrome/src/browser_action/browser_action.html
@@ -31,7 +31,9 @@
             #header {
                 text-align:center;
                 margin-bottom:10px;
-                border-bottom:1px solid #eee;
+            }
+            #no {
+                border-top:1px solid #eee;
             }
             #header p {
                 margin:5px 0 10px 0;
@@ -50,6 +52,9 @@
             }
             #data p:nth-child(2n) {
                 background:#efefef;
+            }
+            #header a, #data a {
+                outline:none;
             }
         </style>
         <script src="../../js/jquery/jquery.min.js"></script>
