read mark button

--- a/pyha-chrome/src/browser_action.html
+++ b/pyha-chrome/src/browser_action.html
@@ -17,6 +17,7 @@
         </div>
         <div id="no"><p><em>Нет новых сообщений</em></p></div>
         <div id="data"></div>
+        <div id="mark-read"><button>Прочитать все</button></div>
     </body>
 </html>
 
